Add safe slicing method which checks alignment. Remove asSliceUnbounded. Clarify javadoc.